--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </div>
             </div>
             
+            
+            <button class="btn-winningScore"><input type="number" id="input-0" value="100"></input><i class="ion-ios-play"></i>Winning Score</button>
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
